testcases/error/too_large_enum_variant.veryl
module too_large_enum_variant {
    enum EnumA: logic<1> {
        X = 10,
    }
}
